src/test/valid/extensionTests/functionOverloading.wacc
begin
int f(int a, int b) is
return 0
end
int f() is
return 1
end
int x = call f();
println x
end
