src/test/invalid/semanticErr/custom/pairElemSthELseFromId.wacc
begin
  pair(int, char) p = newpair(10, 'a') ;
  bool f = fst 1
end